java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/RemoveUselessCastTest/testRedundantCast1.pass
package org.netbeans.test.java.hints;

public abstract class RedundantCast1 {
    
    public RedundantCast1() {
    }
    
    public void test() {
        String s = get(String.class);
    }
    
    public <T> T get(Class<T> c) {
        return null;
    }
    
}
